istio-conf/fs-mt-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fs-mt-vs
spec:
  hosts:
  # Apply only to traffic with host header set to fs-mt.com
  - "fs-mt.com"
  gateways:
  # Resolve traffic from fs-gateway and from anywhere in the mesh.
  - fs-gateway
  - mesh
  http:
  - route:
    - destination:
        host: fs-mt.multi-tenant.svc.cluster.local
        port:
          number: 9091
