istio-conf/fs-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fs-vs
spec:
  hosts:
  # Apply only to traffic with host header set to fs.com
  - "fs.com"
  gateways:
  # Resolve traffic from fs-gateway and from anywhere in the mesh.
  - fs-gateway
  - mesh
  http:
  # route traffic based on the value of "tenant" header. 
  # Route to fs service in tenant-1 namespace if the header is set to tenant-1.
  # Same for tenant-2.
  - match:
    - headers:
        tenant:
          exact: tenant-1
    route:
    - destination:
        host: fs.tenant-1.svc.cluster.local
        port:
          number: 9091
  - match:
    - headers:
        tenant:
          exact: tenant-2
    route:
    - destination:
        host: fs.tenant-2.svc.cluster.local
        port:
          number: 9091
